fix straight quotes and apostrophes

--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -43,7 +43,7 @@ and the apprehension of there being less steadiness and
 firmness amongst people in this age than in past ages,
 often troubled me while I was a child.
 
-A thing remarkable in my childhood was, that once going to a neighbor's house,
+A thing remarkable in my childhood was, that once going to a neighbor`'s house,
 I saw on the way, a robin sitting on her nest, and as I came near she went off, but,
 having young ones, flew about and with many cries expressed her concern for them.
 I stood and threw stones at her, till one striking her, she fell down dead:
@@ -113,7 +113,7 @@ I was filled with confusion; and in great affliction, both of mind and body,
 I lay and bewailed myself.
 
 I had not confidence to lift up my cries to God, whom I had thus offended;
-but in a deep sense of my great folly, I was humbled before' him: and at length,
+but in a deep sense of my great folly, I was humbled before`' him: and at length,
 that word which is as a fire and a hammer, broke and dissolved my rebellious heart,
 and then my cries were put up in contrition;
 and in the multitude of his mercies I found inward relief, and felt a close engagement,
@@ -241,7 +241,7 @@ in this more public employment, I might serve Him, my gracious Redeemer,
 in that humility and self-denial, with which I had been, in a small degree,
 exercised in a more private life.
 The man, who employed me, furnished a shop in Mount Holly,
-about five miles from my father's house, and six from his own; and there I lived alone,
+about five miles from my father`'s house, and six from his own; and there I lived alone,
 and tended his shop.
 Shortly after my settlement here,
 T was visited by several young people my former acquaintance,
@@ -250,7 +250,7 @@ I cried to the Lord in secret for wisdom and strength;
 for I felt myself encompassed with difficulties,
 and had fresh occasion to bewail the follies of time past,
 in contracting a familiarity with libertine people:
-and as I had now left my father's house outwardly,
+and as I had now left my father`'s house outwardly,
 I found my heavenly Father to be merciful to me beyond what I can express.
 
 By day I was much amongst people, and had many trials to go through; but in the evenings,
@@ -318,7 +318,7 @@ and to take heed, lest, while I was standing to speak, my own will should get up
 and cause me to utter words from worldly wisdom,
 and depart from the channel of the true Gospel ministry.
 In the management of my outward affairs, I may say with thankfulness,
-I found truth to be my support; and I was respected in my master's family,
+I found truth to be my support; and I was respected in my master`'s family,
 who came to live in Mount Holly within two years after my going there.
 
 About the twenty-third year of my age, I had many fresh and heavenly openings,
