--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -8,7 +8,7 @@
 * His thoughts on the neglect of a religious care in the education of the negroes.
 
 The 13th day of the second month, in the year 1757, being then in good health,
-and abroad with Friends visiting families, I lodged at a Friend's house in Burlington;
+and abroad with Friends visiting families, I lodged at a Friend`'s house in Burlington;
 and going to bed about the time usual with me, I awoke in the night, and my meditations,
 as I lay, were on the goodness and mercy of the Lord;
 in a sense whereof my heart was contrite.
@@ -37,10 +37,10 @@ I had conversation with him at sundry times, and at length, feeling easy in my m
 I had conversation with several elderly Friends of Philadelphia on the subject;
 and he obtaining a certificate suitable to the occasion,
 we set off in the fifth month of the year 1757.
-Coming to Nottingham week-day meeting, we lodged at John Churchman's,
+Coming to Nottingham week-day meeting, we lodged at John Churchman`'s,
 and here I met with our friend Benjamin Buffington, from New England,
 who was returning from a visit to the southern provinces.
-From there we crossed the river Susquehanna, and lodged at William Cox's in Maryland;
+From there we crossed the river Susquehanna, and lodged at William Cox`'s in Maryland;
 and soon after I entered this province, a deep and painful exercise came upon me,
 of which I had often had some feeling since my mind was drawn toward these parts,
 and with which I had acquainted my brother before we agreed to join as companions.
@@ -102,7 +102,7 @@ that work to which I believed he had called me.
 And as I copy this after my return, I may add, that oftentimes I did so,
 under a sense of duty.
 The way in which I did it was thus;
-when I expected soon to leave a Friend's house where I had had entertainment,
+when I expected soon to leave a Friend`'s house where I had had entertainment,
 if I believed that I should not keep clear from
 the gain of oppression without leaving money,
 I spoke to one of the heads of the family privately,
@@ -116,11 +116,11 @@ that my way was made easier than I expected; and few, if any,
 manifested any resentment at the offer, and most of them, after some talk,
 accepted of them.
 
-The 7th day of the fifth month, in the year 1757, I lodged at a Friend's house;
+The 7th day of the fifth month, in the year 1757, I lodged at a Friend`'s house;
 and the next day being the first of the week, was at Patapsco meeting;
 then crossed Patuxent river, and lodged at a public house.
 
-On the 9th breakfasted at a Friend's house; who putting us a little on our way,
+On the 9th breakfasted at a Friend`'s house; who putting us a little on our way,
 I had conversation with him in the fear of the Lord, concerning his slaves;
 in which my heart was tender, and I used much plainness of speech with him,
 which he appeared to take kindly.
@@ -181,7 +181,7 @@ he had sometimes thought it might be just in the Almighty so to order it.
 
 Having travelled through Maryland, we came amongst Friends at Cedar creek in Virginia,
 on the 12th day of the fifth month; and the next day rode,
-in company with several Friends, a day's journey to Camp creek.
+in company with several Friends, a day`'s journey to Camp creek.
 
 As I was riding along in the morning,
 my mind was deeply affected in a sense I had of the lack of Divine
@@ -198,17 +198,17 @@ as a condition proper to the race of so wicked a man as Cain was.
 Then another spake in support of what had been said.
 To all which, I replied in substance as follows:
 Noah and his family were all who survived the flood, according to Scripture;
-and as Noah was of Seth's race, the family of Cain was wholly destroyed.
+and as Noah was of Seth`'s race, the family of Cain was wholly destroyed.
 One of them said, that after the flood Ham went to the land of Nod, and took a wife;
-that Nod was a land far distant, inhabited by Cain's race,
+that Nod was a land far distant, inhabited by Cain`'s race,
 and that the flood did not reach it;
 and as Ham was sentenced to be a servant of servants to his brethren,
 these two families being thus joined, were undoubtedly fit only for slaves.
 I replied, the flood was a judgment upon the world for their abominations;
-and it was granted that Cain's stock was the most wicked,
+and it was granted that Cain`'s stock was the most wicked,
 and therefore unreasonable to suppose they were spared:
-as to Ham's going to the land of Nod for a wife, no time being fixed.
-Nod might be inhabited by some of Noah's family, before Ham married a second time;
+as to Ham`'s going to the land of Nod for a wife, no time being fixed.
+Nod might be inhabited by some of Noah`'s family, before Ham married a second time;
 moreover the text says, "`That all flesh died that moved upon the earth.`"
 I further reminded them, how the prophets repeatedly declare,
 "`that the son shall not suffer for the iniquity of the father;
@@ -227,7 +227,7 @@ and happy will it be for such, who walk in uprightness before him:
 thus our conversation ended.
 
 On the 14th day of the fifth month I was at Camp creek Monthly Meeting,
-and then rode to the mountains up James river, and had a meeting at a Friend's house;
+and then rode to the mountains up James river, and had a meeting at a Friend`'s house;
 in both which I felt sorrow of heart, and my tears were poured out before the Lord,
 who was pleased to afford a degree of strength by which way
 was opened to clear my mind amongst Friends in those places.
@@ -237,7 +237,7 @@ Here I found a tender seed;
 and as I was preserved in the ministry to keep low with the Truth,
 the same Truth in their hearts answered it,
 so that it was a time of mutual refreshment from the presence of the Lord.
-I lodged at James Stanley's, father of William Stanley,
+I lodged at James Stanley`'s, father of William Stanley,
 one of the young men who suffered imprisonment at Winchester last summer,
 on account of their testimony against fighting;
 and I had some satisfactory conversation with him concerning it.
@@ -293,7 +293,7 @@ The correction ensuing on their disobedience to overseers, or slothfulness in bu
 is often very severe, and sometimes desperate.
 Men and women have many times scarcely clothes enough to hide their nakedness,
 and boys and girls, ten and twelve years old,
-are often quite naked amongst their master's children.
+are often quite naked amongst their master`'s children.
 
 Some of our Society, and some of the Society called New Lights,
 use some endeavors to instruct those they have in reading;
@@ -576,7 +576,7 @@ that I had for some time been under the like scruple.
 I believed him to be one who was concerned to walk uprightly before the Lord;
 and esteemed it my duty to preserve this note concerning him; his name was Samuel Newby.
 
-From hence I went back into Virginia, and had a meeting near James Cowpland's;
+From hence I went back into Virginia, and had a meeting near James Cowpland`'s;
 it was a time of inward suffering; but through the goodness of the Lord,
 I was made content: then to another meeting; where, through the renewings of pure love,
 we had a very comfortable season.
@@ -599,7 +599,7 @@ From there to Black creek and Caroline meetings; from which,
 accompanied by William Stanley, before mentioned, we rode to Goose creek,
 being much through the woods, and about one hundred miles.
 We lodged the first night, at a public house; the second in the woods;
-and the next day we reached a Friend's house, at Goose creek.
+and the next day we reached a Friend`'s house, at Goose creek.
 
 In the woods we lay under some disadvantage,
 having no fire-works nor bells for our horses; but we stopped a little before night,
@@ -637,7 +637,7 @@ at both which places I had cause humbly to adore Him,
 who supported me through many exercises,
 and by whose help I was enabled to reach the true witness in the hearts of others:
 there were some hopeful young people in those parts.
-I had meetings at John Everit's in Monallen, and at Huntingdon;
+I had meetings at John Everit`'s in Monallen, and at Huntingdon;
 and was made humbly thankful to the Lord,
 who opened my heart amongst the people in these new settlements,
 so that it was a time of encouragement to the honest minded.
