--- a/journal-writings/modernized/09-chapter-7.adoc
+++ b/journal-writings/modernized/09-chapter-7.adoc
@@ -132,7 +132,7 @@ we had at times to partake of heavenly comfort with them who were meek,
 and were often favored to part with Friends in the nearness of true Gospel fellowship.
 
 We returned to Boston, and had another comfortable opportunity with Friends there;
-and from there rode back a day's journey eastward of Boston.
+and from there rode back a day`'s journey eastward of Boston.
 Our guide being a heavy man, and the weather hot, and ray companion and I considering it,
 expressed our freedom to go on without him, to which he consented,
 and we respectfully took our leave of him; we did this,
@@ -225,7 +225,7 @@ and the matter was zealously handled by some on both sides.
 In this debate it appeared very clear to me,
 that the spirit of lotteries was a spirit of selfishness,
 which tended to confusion and darkness of understanding;
-and that pleading for it in our meetings, set apart for the Lord's work, was not right:
+and that pleading for it in our meetings, set apart for the Lord`'s work, was not right:
 and in the heat of zeal, I once made reply to what an ancient Friend said,
 and when I sat down, I saw that my words were not enough seasoned with charity;
 and after this I spoke no more on the subject.
@@ -265,7 +265,7 @@ and to be spoken with in the hearing of each other,
 I was free to spend some time among them, and visit them all in their own houses.
 He expressed his liking to the first proposal,
 not doubting their willingness to come together; and as I proposed a visit to ministers,
-elders and overseers only; he named some other's, whom he desired might be present also.
+elders and overseers only; he named some other`'s, whom he desired might be present also.
 As a careful messenger was needed to acquaint them in a proper manner,
 he offered to go to all their houses to open the matter to them and did so.
 About the eighth hour next morning, we met in the meeting-house chamber,
@@ -292,7 +292,7 @@ in having you for their guest; it is good for you to dwell deep,
 that you may feel and understand the spirits of people.
 If we believe Truth points towards a conference on some subjects, in a private way,
 it is needful for us to take heed that their kindness, their freedom and affability,
-do not hinder us from the Lord's work.
+do not hinder us from the Lord`'s work.
 I have seen, that in the midst of kindness and smooth conduct,
 to speak close and home to them who entertain us,
 on points that relate to their outward interest, is hard labor;
@@ -302,7 +302,7 @@ I have found myself disqualified by a superficial friendship.
 As the sense thereof has abased me, and my cries have been to the Lord,
 I have been humbled and made content to appear weak, or as a fool for his sake;
 and thus a door has opened to enter upon it.
-To attempt to do the Lord's work in our own way,
+To attempt to do the Lord`'s work in our own way,
 and to speak of that which is the burden of the word, in a way easy to the natural part,
 does not reach the bottom of the disorder.
 To see the failings of our friends, and think hard of them,
@@ -332,7 +332,7 @@ the more I became sensible that there was a
 considerable number of valuable Friends there,
 though an evil spirit tending to strife, had been at work amongst them.
 I was cautious of making any visits, but as my mind was particularly drawn to them;
-and in that way we had some sittings in Friends' houses,
+and in that way we had some sittings in Friends`' houses,
 where the heavenly wing was at times spread over us, to our mutual comfort.
 
 My beloved companion had very acceptable service on this island.
@@ -419,7 +419,7 @@ and was in some degree comforted in a belief, that a good number remain in that 
 who retain a sense of Truth;
 and that there are some young people attentive to the voice of the heavenly Shepherd.
 The last meeting in which Friends from the several parts of the quarter came together,
-was select; and through the renewed manifestation of the Father's love,
+was select; and through the renewed manifestation of the Father`'s love,
 the hearts of the sincere were united together.
 
 That poverty of spirit and inward weakness,
