--- a/journal-writings/modernized/12-chapter-10.adoc
+++ b/journal-writings/modernized/12-chapter-10.adoc
@@ -185,11 +185,11 @@ I went over amongst Friends on the Jersey shore,
 and tarried till the morning on which they had appointed to sail;
 and as I lay in bed the latter part of that night, my mind was comforted;
 and I felt what I esteemed a fresh confirmation,
-that it was the Lord's will I should pass through some further exercises near home.
+that it was the Lord`'s will I should pass through some further exercises near home.
 
 So I went home, and still felt like a sojourner with my family,
 and in the fresh spring of pure love, had some labors in a private way amongst Friends,
-on a subject relating to Truth's testimony;
+on a subject relating to Truth`'s testimony;
 under which I had frequently been exercised in heart for some years.
 I remember, as I walked on the road under this exercise,
 that passage in Ezekiel came fresh before me, "`Whithersoever their faces were turned,
@@ -202,12 +202,12 @@ I was thoughtful how it might end.
 
 I had of late, through various exercises,
 been much weaned from the pleasant things of this life;
-and I now thought if it was the Lord's will to put an end to my labors,
+and I now thought if it was the Lord`'s will to put an end to my labors,
 and graciously receive me into the arms of his mercy, death would be acceptable to me;
 but if it was his will further to refine me under affliction, and make me in any degree,
 useful in his church, I desired not to die.
 I may with thankfulness say, that in this case I felt resignedness wrought in me,
-and had no inclination to send for a doctor; believing if it was the Lord's will,
+and had no inclination to send for a doctor; believing if it was the Lord`'s will,
 through outward means, to raise me up,
 some sympathizing Friends would be sent to minister to me; who were accordingly.
 But though I was carefully attended, yet the disorder was at times so heavy,
@@ -230,7 +230,7 @@ After this I requested my nurse to apply warmth to my feet, and I revived.
 The next night feeling a weighty exercise of spirit,
 and having a solid Friend sitting up with me, I requested him to write what I said;
 which he did, as follows: "`4th day of the first month, 1770,
-about five o'clock in the morning.--I have seen in the light of the Lord,
+about five o`'clock in the morning.--I have seen in the light of the Lord,
 that the day is approaching, when the man that is the most wise in human policy,
 shall be the greatest fool; and the arm that is mighty to support injustice,
 shall be broken to pieces.
