--- a/journal-writings/modernized/14-chapter-12.adoc
+++ b/journal-writings/modernized/14-chapter-12.adoc
@@ -28,7 +28,7 @@ I have been at Quarterly Meetings at Sherrington, Northampton, Banbury and Shipt
 and had sundry meetings between.
 My mind has been bowed under a sense of Divine goodness manifested amongst us;
 my heart being often enlarged in true love, both amongst ministers and elders,
-and in public meetings; and through the Lord's goodness,
+and in public meetings; and through the Lord`'s goodness,
 I believe it has been a fresh visitation to many, in particular to the youth.
 
 The 17th day of the month.
@@ -39,7 +39,7 @@ and through his tender mercies find peace in the labors I have gone through.
 The 26th day of the month.
 I have continued traveling northward visiting meetings: was this day at Nottingham;
 which, in the forenoon especially, was through Divine love a heart-tendering season:
-next day had a meeting with Friends' children and some Friends; this,
+next day had a meeting with Friends`' children and some Friends; this,
 through the strengthening arm of the Lord, was a time to be thankfully remembered.
 
 The 2nd day of the eighth month, and first of the week, was this day at Sheffield,
@@ -145,7 +145,7 @@ and as I have kept inward, way has opened for conversation with such in private,
 in which Divine goodness has favored us together with heart-tendering times.
 
 The 26th day of the month.
-Being now at George Crosfield's, in the county of Westmoreland,
+Being now at George Crosfield`'s, in the county of Westmoreland,
 I feel a concern to commit to writing, that which to me has been a case uncommon.
 
 In a time of sickness with the pleurisy, a little upward of two years and a half ago,
@@ -200,11 +200,11 @@ was often stained with worldly glory; and that in the present state of things,
 I should take heed how I fed myself out of silver vessels.
 
 Soon after my recovery, going to our Monthly Meeting,
-I dined at a Friend's house where drink was brought in silver vessels,
+I dined at a Friend`'s house where drink was brought in silver vessels,
 and not in any other; and needing some drink, I told him my case with weeping;
 and he ordered some drink for me in another vessel.
 
-The like I afterwards went through in several Friends' houses in America,
+The like I afterwards went through in several Friends`' houses in America,
 and have also in England, since I came here: and have cause, with humble reverence,
 to acknowledge the loving-kindness of my heavenly Father,
 who has preserved me in such a tender frame of mind, that none, I believe,
@@ -284,7 +284,7 @@ a large meeting-house and very full: and through the opening of pure love,
 it was a strengthening time to me, and I believe to many more.
 
 The 13th day of the month.
-Was this day at Richmond, a small meeting; but the town's people coming in,
+Was this day at Richmond, a small meeting; but the town`'s people coming in,
 the house was crowded: it was a time of heavy labor;
 and I believe was a profitable meeting.
 
@@ -399,7 +399,7 @@ rightly exercised under the cross, will find nourishment.
 The gift is pure, and while the eye is single in attending thereto,
 the understanding is preserved clear; self is kept out;
 and we rejoice in filling up that which remains of the afflictions of Christ,
-for his body's sake, which is the church.
+for his body`'s sake, which is the church.
 
 The natural man loves eloquence, and many love to hear eloquent orations;
 and if there is not a careful attention to the gift,
@@ -427,13 +427,13 @@ preserved the following minutes of his expressions in the time of his sickness,
 and of his decease.
 
 First-day, the 27th of the ninth month, 1772, His disorder appeared to be the smallpox:
-being asked to have a doctor's advice,
+being asked to have a doctor`'s advice,
 he signified he had not freedom or liberty in his mind so to do,
 standing wholly resigned to his will who gave him life,
 and whose power he had witnessed to raise and heal him in sickness before,
 when he seemed nigh unto death; and if he was to wind up now, he was perfectly resigned,
 having no will either to live or die, and did not choose any should be sent for to him.
-But a young man an apothecary' coming of his own accord the next day,
+But a young man an apothecary`' coming of his own accord the next day,
 and desiring to do something for him,
 he said he found a freedom to confer with him and the other Friends about him,
 and if anything should be proposed, as to medicine,
@@ -465,7 +465,7 @@ I saw that meekness under suffering was showed
 to us in the most affecting example of your Son,
 and you taught me to follow him, and I said, your will O Father be done.`"
 Fourth-day morning, being asked how he felt himself, he meekly answered,
-I don't know that I have slept this night.
+I don`'t know that I have slept this night.
 I feel the disorder making its progress,
 but my mind is mercifully preserved in stillness and peace.
 
@@ -495,7 +495,7 @@ After giving in something to be inserted in his Journal, he said,
 "`I believe the Lord will now excuse me from exercises of this kind.
 I see no work but one, which is to be the last wrought by me in this world;
 the messenger will come that will release me from all these troubles;
-but it must be in the Lord's time, which I am waiting for.`"
+but it must be in the Lord`'s time, which I am waiting for.`"
 He said he had labored to do whatever was required, according to the ability received,
 in the remembrance of which he had peace; and though the disorder was strong at times,
 and would like a whirlwind come over his mind,
@@ -546,9 +546,9 @@ for sweet is his voice and his countenance is comely.`"
 
 First-day, 4th of the tenth month,
 being very weak and in general difficult to be understood,
-he uttered a few words in commemoration of the Lord's goodness; and added,
+he uttered a few words in commemoration of the Lord`'s goodness; and added,
 "`how tenderly have I been waited on in this time of affliction,
-in which I may say in Job's words,
+in which I may say in Job`'s words,
 "`Tedious days and wearisome nights are appointed unto me;`" and how
 many are spending their time and money in vanity and superfluities,
 while thousands and tens of thousands lack the necessaries of life,
@@ -569,7 +569,7 @@ and he frequently wrote when he lacked anything.
 About the second hour on fourth-day morning he asked for pen and ink,
 and at several times with much difficulty wrote thus,
 "`I believe my being here is in the wisdom of Christ, I know not as to life or death.`"
-About a quarter before six o'clock the same morning he seemed to fall into an easy sleep,
+About a quarter before six o`'clock the same morning he seemed to fall into an easy sleep,
 which continued about half an hour, when seeming to awake,
 he breathed a few times with more difficulty, and expired without sigh, groan,
 or struggle.
