--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -79,7 +79,7 @@ and such an inquiry I would earnestly recommend.
 
 [quote.scripture, , Matt. 25:40]
 ____
-"'Forasmuch as you did it to the least of these my brethren, you did it unto me.`"
+"`'`Forasmuch as you did it to the least of these my brethren, you did it unto me.`"
 ____
 
 
@@ -105,7 +105,7 @@ that we are subject to the like afflictions and infirmities of body,
 the like disorders and frailties in mind, the like temptations, the same death,
 and the same judgment, and that the all-wise Being is Judge and Lord over us all,
 it seems to raise an idea of general brotherhood,
-and a disposition easy to be touched with a feeling of each other's afflictions:
+and a disposition easy to be touched with a feeling of each other`'s afflictions:
 but when we forget those things, and look chiefly at our outward circumstances,
 in this and some ages past,
 constantly retaining in our minds the distinction between us and them,
@@ -149,7 +149,7 @@ the Jewish Christians would not so much as eat, was strange to them.
 All they of the circumcision were astonished to see it;
 and the apostles and brethren of Judea contended with Peter about it,
 till he having rehearsed the whole matter,
-and fully shown that the Father's love was unlimited,
+and fully shown that the Father`'s love was unlimited,
 they are thereat struck with admiration, and cry out,
 "`Then has God also to the Gentiles granted repentance unto life.`"
 The opinion of peculiar favors being confined to them, was deeply rooted,
@@ -167,7 +167,7 @@ it proved matter of offense and astonishment.
 
 To consider mankind otherwise than brethren, to think favors are peculiar to one nation,
 and to exclude others, plainly supposes a darkness in the understanding:
-for as God's love is universal, so where the mind is sufficiently influenced by it,
+for as God`'s love is universal, so where the mind is sufficiently influenced by it,
 it begets a likeness of itself, and the heart is enlarged towards all men.
 Again, to conclude a people froward, perverse, and worse by nature than others,
 who ungratefully receive favors, and apply them to bad ends,
@@ -225,7 +225,7 @@ agreeably to the doctrine of Christ Jesus.
 "`He has laid down the best criterion,
 by which mankind ought to judge of their own conduct,
 and others judge for them of theirs, one towards another, namely:
-'Whatsoever you would that men should do unto you, do you even so to them.'
+'`Whatsoever you would that men should do unto you, do you even so to them.`'
 I take it, that all men by nature, are equally entitled to the equity of this rule,
 and under the indispensable obligations of it.
 One man ought not to look upon another man or society of men, as so far beneath him,
@@ -290,7 +290,7 @@ a more happy situation than can ever be promised
 by the utmost reach of art and power united,
 not proceeding from heavenly wisdom.
 
-A supply to nature's lawful needs, joined with a peaceful humble mind,
+A supply to nature`'s lawful needs, joined with a peaceful humble mind,
 is the truest happiness in this life; and if we arrive at this,
 and continue to walk in the path of the just, our case will be truly happy.
 Though herein we may part with, or miss of the glaring show of riches,
@@ -509,7 +509,7 @@ that they would consider their latter end!`"
 
 [quote.scripture, , Deut. 1:17]
 ____
-"`You shall not respect persons in judgment; but you shall hear the small as well as the great: you shall not be afraid of the face of man; for the judgment is God's.`"
+"`You shall not respect persons in judgment; but you shall hear the small as well as the great: you shall not be afraid of the face of man; for the judgment is God`'s.`"
 ____
 
 [.chapter-subtitle--blurb]
@@ -675,7 +675,7 @@ where mention is only made of the heads of the family committing wickedness;
 and it is likely that the degenerate Jews,
 misunderstanding some occurrences of this kind,
 took occasion to charge God with being unequal; so that a saying became common,
-"`The Fathers have eaten sour grapes, and the children's teeth are set on edge.`"
+"`The Fathers have eaten sour grapes, and the children`'s teeth are set on edge.`"
 Jeremiah and Ezekiel, two of the inspired prophets, who lived near the same time,
 were concerned to correct this error.
 Ezekiel is large on the subject.
@@ -793,7 +793,7 @@ against which Israel went to battle, unto whom they were to proclaim peace,
 and if the inhabitants made answer of peace, and opened their gates,
 they were not to destroy them, but make them tributaries.
 
-The children of Israel were then the Lord's host,
+The children of Israel were then the Lord`'s host,
 and executioners of his judgments on people hardened in wickedness.
 They were not to go to battle, but by his appointment.
 
@@ -886,7 +886,7 @@ is far from being a clear case.
 
 Making constructions of the law contrary to the true meaning of it,
 was common amongst that people.
-Samuel's sons took bribes, and perverted judgment.
+Samuel`'s sons took bribes, and perverted judgment.
 Isaiah complained that they justified the wicked for reward.
 Zephaniah, contemporary with Jeremiah,
 on account of the injustice of the civil magistrates,
@@ -903,7 +903,7 @@ These corruptions continued till the days of our Saviour, who told the Pharisees
 Thus it appears that they corrupted the law of Moses;
 nor is it unlikely that among many others this was one;
 for oppressing the strangers was a heavy charge against the Jews,
-and very often strongly represented by the Lord's faithful prophets.
+and very often strongly represented by the Lord`'s faithful prophets.
 
 That the liberty of man was, by the inspired law-giver esteemed precious,
 appears in this; that such who unjustly deprived men of it,
@@ -964,7 +964,7 @@ The men who transgressed my covenant which they made,
 and passed between the parts of the calf, I will give into the hands of their enemies,
 and their dead bodies shall be for meat unto the fowls of the heaven,
 and the beasts of the earth.`"
-Soon after this their city was taken and burnt; the king's sons and the princes slain;
+Soon after this their city was taken and burnt; the king`'s sons and the princes slain;
 and the king, with the chief men of his kingdom, carried captive to Babylon.
 Ezekiel, prophesying the return of that people to their own land, directs,
 "`You shall divide the land by lot, for an inheritance unto you,
@@ -1076,7 +1076,7 @@ that for them to serve us in moderation, so far as relates to the right use of t
 looks consonant to the design of our Creator.
 
 There is nothing in their frame which argues the contrary; but in men there is.
-The frame of men's bodies, and the dispositions of their minds are different;
+The frame of men`'s bodies, and the dispositions of their minds are different;
 some who are tough and strong, and their minds active,
 choose ways of life requiring much labor to support them; others are soon weary;
 and though use makes labor more tolerable, yet some are less apt for toil than others,
@@ -1319,7 +1319,7 @@ which amounts to about one hundred pounds, in Guinea value, as the goods must se
 After which we have free license to trade,
 which is published throughout the whole land by the crier.
 And yet before we can deal with any person,
-we are obliged to buy the king's whole stock of slaves, at a set price;
+we are obliged to buy the king`'s whole stock of slaves, at a set price;
 which is commonly one third or fourth higher than ordinary.
 After which we have free leave to deal with all his subjects, of what rank so ever.
 But if there happen to be no stock of slaves,
@@ -1388,7 +1388,7 @@ but sent them back to him.
 I afterwards told him, I came not into his country to make slaves;
 but rather to deliver those from the slavery of the devil,
 whom he kept in miserable thralldom.
-The ship I went aboard was loaded with elephants' teeth,
+The ship I went aboard was loaded with elephants`' teeth,
 and slaves to the number of six hundred and eighty men, women and children.
 It was a pitiful sight to behold how all these people were bestowed.
 The men were standing in the hold, fastened one to another with stakes,
@@ -1431,7 +1431,7 @@ that after many endeavors used,
 they could never make them eat nor drink after they came in the vessel;
 but in a desperate resolution starved themselves to death,
 behaving toward the last like mad-men.`"
-In Randall's Geography, printed 1744, we are informed,
+In Randall`'s Geography, printed 1744, we are informed,
 "`That in a time of full peace nothing is more common than for
 the negroes of one nation to steal those of another,
 and sell them to the Europeans.
@@ -1457,7 +1457,7 @@ were spent in propagating Truth and righteousness amongst the heathen.
 When Saul, by the hand of Doeg, slew four-score priests at once,
 he had a jealousy that one of them at least was confederate with David,
 whom he considered as his enemy.
-Herod slaying all the male children in Bethlehem of two 5'ears old and under,
+Herod slaying all the male children in Bethlehem of two 5`'ears old and under,
 was an act of uncommon cruelty; but he supposed there was a male child there,
 within that age, who was likely to be king of the Jews,
 and finding no way to destroy him, but by destroying them all,
@@ -1472,7 +1472,7 @@ but they had this objection against them.
 That they obstinately persisted in opposition to the holy mother church,
 and being heretics, it was right to work their ruin and extirpation,
 and raze out their memory from among men.
-Fox's Acts and Monuments, page 646.
+Fox`'s Acts and Monuments, page 646.
 
 In favor of those cruelties, every one had what they deemed a plea.
 These scenes of 412 blood and cruelty among the barbarous inhabitants of Guinea,
@@ -1610,7 +1610,7 @@ and then put them to hard labor, and ever after considered them as slaves,
 the action would be looked upon as unrighteous.
 
 If those negro merchants should have children after being among us,
-whose endowments and conduct were like other people's in common,
+whose endowments and conduct were like other people`'s in common,
 and on their attaining to mature age, and requesting to have their liberty,
 they should be told they were born in slavery, and were lawful slaves,
 and therefore their request should be denied;
@@ -1647,10 +1647,10 @@ The upright in heart cannot succeed the wicked in their wickedness;
 nor is it consonant to the life they live, to hold fast an advantage unjustly gained.
 
 The negroes who live by plunder and the slave-trade, steal poor innocent children,
-invade their neighbors' territories, and spill much blood to get these slaves:
+invade their neighbors`' territories, and spill much blood to get these slaves:
 and can it be possible for an honest man to think that with a view to self-interest,
 we may continue slavery to the offspring of these unhappy sufferers,
-merely because they are the children of slaves', and not have a share of this guilt?
+merely because they are the children of slaves`', and not have a share of this guilt?
 It is granted by many, that the means used in getting them are unrighteous,
 and that buying them when brought here is wrong;
 yet as setting them free is attended with some difficulty, they do not comply with it;
