--- a/journal-writings/modernized/16-various-subjects.adoc
+++ b/journal-writings/modernized/16-various-subjects.adoc
@@ -1,6 +1,6 @@
 
 [#various, short="Considerations on Various Subjects"]
-== Considerations on the Pure Wisdom and Human Policy; on Labor, on schools; and on the Right Use of the Lord's Outward Gifts.
+== Considerations on the Pure Wisdom and Human Policy; on Labor, on schools; and on the Right Use of the Lord`'s Outward Gifts.
 
 [.chapter-subtitle--blurb]
 First Printed in the Year 1768
@@ -115,7 +115,7 @@ While I write on this subject,
 I feel my mind tenderly affected toward those honestly disposed people,
 who have been brought up in employments attended with these difficulties.
 
-To such I may say, in the feeling of our heavenly Father's love,
+To such I may say, in the feeling of our heavenly Father`'s love,
 and number myself with you, O that our eyes may be single to the Lord!
 May we reverently wait on him for strength to
 lay aside all unnecessary expense of every kind,
@@ -371,7 +371,7 @@ and all unite in humbly seeking to the Lord, he would graciously instruct us,
 and strengthen us,
 to relieve the youth from various snares in which many of them are entangled.
 
-=== On the Right Use of the Lord's Outward Gifts
+=== On the Right Use of the Lord`'s Outward Gifts
 
 As our understandings are opened by the pure light,
 we experience that through an inward approaching to God,
