--- a/journal-writings/modernized/19-epistle.adoc
+++ b/journal-writings/modernized/19-epistle.adoc
@@ -44,7 +44,7 @@ and yet judge others whose conduct appears more dishonorable than theirs,
 here the pure authority of discipline ceases as to such offenders,
 and a temptation is laid in their way to wrangle and contend.
 "`Judge not,`" said our Lord, "`that you be not judged.`"
-This forbidding alludes to man's judgment,
+This forbidding alludes to man`'s judgment,
 and points out the necessity of humbly attending to that sanctifying power under
 which the faithful experience the Lord to be "`a spirit of judgment to them.`"
 And as we feel his holy Spirit to mortify the deeds of the body in us, and can say,
@@ -94,7 +94,7 @@ How weighty are our solemn meetings when the name of Christ is
 kept holy "`How precious is that state in which the children
 of the Lord are so redeemed from the love of this world,
 that they are accepted and blessed in all that they do.`"
-R+++.+++ Barclay's Apology, p. 404.
+R+++.+++ Barclay`'s Apology, p. 404.
 
 How necessary is it that we who profess these principles,
 and are active in supporting them, should faithfully abide in Divine strength,
@@ -204,7 +204,7 @@ and at times may be under discouragements with regard to proceeding
 in that pure way which Christ by his holy Spirit leads into.
 The depth of disorder and weakness, which so much prevails, being opened,
 doublings are apt to arise as to the possibility of proceeding as an
-assembly of the Lord's people in the pure counsel of Truth;
+assembly of the Lord`'s people in the pure counsel of Truth;
 and here I feel a concern to express in uprightness,
 that which has been opened in my mind, under the power of the cross of Christ,
 relating to a visible gathered church, the members whereof are guided by the holy Spirit.
@@ -369,7 +369,7 @@ that the works of all may be brought to light,
 and those to judgment which are wrought in the wisdom of this world, and have also seen,
 that in a mind thoroughly subjected to the power of the cross,
 there is a savor of life to be felt, which evidently tends to gather souls to God,
-while the greatest works in the visible church, brought forth in man's wisdom,
+while the greatest works in the visible church, brought forth in man`'s wisdom,
 remain to be unprofitable.
 
 Where people are divinely gathered into a holy fellowship,
@@ -392,7 +392,7 @@ When such seekers, wearied with empty forms, look towards uniting with us as a p
 and behold active members among us depart in their
 customary way of living from that purity of life,
 which under humbling exercises has been opened
-before them as the way of the Lord's people,
+before them as the way of the Lord`'s people,
 how mournful and discouraging is the prospect! and how strongly does
 such unfaithfulness operate against the spreading of the peaceable,
 harmonious principles and testimony of truth amongst mankind?
@@ -454,7 +454,7 @@ the iniquities of the fathers are visited upon these children,
 who take hold of the unrighteousness of their fathers,
 and live in that spirit in which those iniquities were committed.
 To this agrees the prophecy of Moses, concerning a rebellious people,
-"`They that are left of you shall pine away in their iniquities in your enemy's land,
+"`They that are left of you shall pine away in their iniquities in your enemy`'s land,
 and in the iniquities of their fathers shall they pine away.`"
 Our blessed Lord in beholding the hardness of heart in that generation,
 and feeling in himself,
@@ -467,14 +467,14 @@ Tender compassion fills my heart toward my fellow-creatures estranged
 from the harmonious government of the Prince of peace,
 and a labor attends me, that they may be gathered to this peaceable habitation.
 
-In being inwardly prepared to suffer adversity for Christ's sake,
+In being inwardly prepared to suffer adversity for Christ`'s sake,
 and weaned from a dependance on the arm of flesh,
 we feel that there is a rest for the people of God,
 and that it stands in a perfect resignation of ourselves to his holy will.
 In this condition all our needs and desires arc bounded by pure wisdom,
 and our minds are wholly attentive lo the counsel of Christ inwardly communicated.
 
-This has appeared to me a habitation of safety for the Lord's people,
+This has appeared to me a habitation of safety for the Lord`'s people,
 in times of outward commotion and trouble,
 and desires from the fountain of pure love are opened in me,
 to invite my brethren and fellow-creatures to feel for,
