--- a/journal-writings/original/01-testimony-yorkshire.adoc
+++ b/journal-writings/original/01-testimony-yorkshire.adoc
@@ -63,7 +63,7 @@ but it was deemed unnecessary, they being already published.
 He was a man endued with a large natural capacity,
 and being obedient to the manifestations of Divine grace,
 having in patience and humility endured many deep baptisms,
-he became thereby sanctified and fitted for the Lord's work,
+he became thereby sanctified and fitted for the Lord`'s work,
 and was truly serviceable in his church.
 Dwelling in awful fear and watchfulness,
 he was careful in his public appearances to feel the putting forth of the Divine Hand,
@@ -98,12 +98,12 @@ His testimony in the last meeting he attended was on this subject, wherein he re
 that as we as a Society,
 when under outward sufferings had often found it our
 concern to lay them before those in authority,
-and thereby in the Lord's time, had obtained relief,
+and thereby in the Lord`'s time, had obtained relief,
 so he recommended this oppressed part of the creation to our notice,
 that as way may open, we may represent their sufferings in an individual,
 if not a Society capacity to those in authority.
 
-Deeply sensible that the desire to gratify people's
+Deeply sensible that the desire to gratify people`'s
 inclinations in luxury and superfluities,
 is the principal ground of oppression, and the occasion of many unnecessary wants,
 he believed it to be his duty to be a pattern of great self-denial,
@@ -126,7 +126,7 @@ and where we may have a testimony of our
 innocence in the hearts of those who behold us.`"
 
 We conclude with fervent desires, that we as a people may thus, by our example,
-promote the Lord's work in the earth; and our hearts being prepared,
+promote the Lord`'s work in the earth; and our hearts being prepared,
 may unite in prayer to the great Lord of the harvest,
 that as in his infinite wisdom he hath greatly stripped the church,
 by removing of late divers faithful ministers and elders,
