--- a/journal-writings/original/02-testimony-burlington.adoc
+++ b/journal-writings/original/02-testimony-burlington.adoc
@@ -64,7 +64,7 @@ that the gifts of Providence should be thankfully
 received and applied to the uses they were designed for.
 
 He several times opened a school at Mount Holly,
-for the instruction of poor Friends' children and others,
+for the instruction of poor Friends`' children and others,
 being concerned for their help and improvement therein.
 His love and care for the rising youth among us was truly great,
 recommending to parents and those who have the charge of them,
@@ -120,7 +120,7 @@ towards a religious visit to Friends in some parts of England,
 particularly in Yorkshire.
 In the first month, 1772, he obtained our certificate,
 which was approved and endorsed by our Quarterly Meeting,
-and by the Half-year's meeting of ministers and elders at Philadelphia.
+and by the Half-year`'s meeting of ministers and elders at Philadelphia.
 He embarked on his voyage in the fifth,
 and arrived in London in the sixth month following,
 at the time of their annual meeting in that city.
@@ -131,7 +131,7 @@ being "`perfectly resigned,
 having no will either to live or die,`" as appears by the testimony of Friends at York,
 in Great Britain, in the suburbs whereof, at the house of our friend Thomas Priestman,
 he died of the small-pox, on the 7th day of the tenth month, 1772,
-and was buried in Friends' burying-ground in that city, on the 9th of the same,
+and was buried in Friends`' burying-ground in that city, on the 9th of the same,
 after a large and solid meeting held on the occasion, aged nearly fifty-two years;
 a minister upwards of thirty years,
 during which time he belonged to Mount Holly particular Meeting,
