--- a/journal-writings/original/05-chapter-3.adoc
+++ b/journal-writings/original/05-chapter-3.adoc
@@ -60,7 +60,7 @@ We laboured in the love of the Gospel, according to the measure received; and,
 through the mercies of Him, who is strength to the poor who trust in him,
 we found satisfaction in our visit.
 In the next winter,
-way opening to visit Friends' families within the compass of our Monthly Meeting,
+way opening to visit Friends`' families within the compass of our Monthly Meeting,
 partly by the labours of two Friends from Pennsylvania,
 I joined in some part of the work;
 having had a desire for some time that it might go forward amongst us.
@@ -96,7 +96,7 @@ having examined and made some small alterations in it,
 directed a number of copies thereof to be published and dispersed amongst Friends.
 
 In the year 1754,
-I found my mind drawn to join in a visit to Friends'
+I found my mind drawn to join in a visit to Friends`'
 families belonging to Chesterfield Monthly Meeting;
 and having the approbation of our own,
 I went to their Monthly Meeting in order to confer with Friends,
@@ -133,7 +133,7 @@ to the 1st of the fourth month, inclusive, 1755; To Friends on the continent of 
 Dear Friends,
 
 In an humble sense of Divine goodness,
-and the gracious continuation of God's love to his people, we tenderly salute you;
+and the gracious continuation of God`'s love to his people, we tenderly salute you;
 and are at this time therein engaged in mind, that all of us who profess the Truth,
 as held forth and published by our worthy predecessors in this latter age of the world,
 may keep near to that Life which is the Light of men,
@@ -234,7 +234,7 @@ but it is the duty of every one to be firm in
 that which they certainly know is right for them.
 A charitable benevolent man, well acquainted with a negro, may, I believe,
 under some circumstances, keep him in his family as a servant,
-on no other motives than the negro's good; but man, as man,
+on no other motives than the negro`'s good; but man, as man,
 knows not what shall be after him,
 nor hath he any assurance that his children will
 attain to that perfection in wisdom and goodness,
