--- a/journal-writings/original/07-chapter-5.adoc
+++ b/journal-writings/original/07-chapter-5.adoc
@@ -50,7 +50,7 @@ that I be not compelled to the thing which my conscience doth repugn or strive a
 And again, in his answer to the emperor: "`I refuse nothing, most noble emperor,
 whatsoever the council shall decree or determine upon me, only this one thing I except,
 that I do not offend God and my conscience.`"
-Fox's Acts and Monuments, page 233. At length,
+Fox`'s Acts and Monuments, page 233. At length,
 rather than act contrary to that which he believed the Lord required of him,
 he chose to suffer death by fire.
 Thomas a Kempis, without disputing against the articles then generally agreed to,
@@ -72,7 +72,7 @@ to correspond with the Meeting for Sufferings in London;
 and another to visit our Monthly and Quarterly Meetings; and after their appointment,
 before the last adjournment of the meeting,
 it was agreed that these two committees should meet
-together in Friends' school-house in the city,
+together in Friends`' school-house in the city,
 at a time then concluded on,
 to consider some things in which the cause of Truth was concerned.
 These committees meeting together, had a weighty conference in the fear of the Lord;
@@ -260,10 +260,10 @@ I went first to said Quarterly Meeting, which was large;
 and several weighty matters came under consideration and debate;
 and the Lord was pleased to qualify some of his servants with strength and firmness,
 to bear the burthen of the day.
-Though I said but little, my mind was deeply exercised; and under a sense of God's love,
+Though I said but little, my mind was deeply exercised; and under a sense of God`'s love,
 in anointing and fitting some young men for his work, I was comforted,
 and my heart was tendered before him.
-From hence I went to the Youths' meeting at Darby,
+From hence I went to the Youths`' meeting at Darby,
 where my beloved friend and brother Benjamin Jones met me,
 by an appointment before I left home, to join in the visit.
 We were at Radnor, Merion, Richland, North Wales, Plymouth and Abington meetings;
@@ -280,7 +280,7 @@ which was made last on that subject.
 The said Quarterly Meeting appointed a committee to consider it,
 and report to their next; which committee having met once and adjourned,
 and I going to Philadelphia to meet a committee of the Yearly Meeting,
-was in town the evening on which the Quarterly Meeting's committee met the second time;
+was in town the evening on which the Quarterly Meeting`'s committee met the second time;
 and finding an inclination to sit with them, was with some others admitted;
 and Friends had a weighty conference on the subject.
 Soon after their next Quarterly Meeting,
