--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -1,7 +1,7 @@
 == Chapter IX.
 
 His religious conversation with a company met to
-see the tricks of a juggler--John Smith's advice;
+see the tricks of a juggler--John Smith`'s advice;
 proceedings of a committee at the Yearly Meeting in
 1764--Contemplations on the nature of true wisdom,
 occasioned by hearing of the cruelty of the Indians to their
@@ -130,7 +130,7 @@ given me a capacity superior to theirs, and shown me,
 that a moderate application to business is proper to my present condition; and that this,
 attended with his blessing, may supply all outward wants,
 while they remain within the bounds he hath fixed;
-and no imaginary wants proceeding from an evil spirit, have any' place in me?
+and no imaginary wants proceeding from an evil spirit, have any`' place in me?
 Attend then, O my soul! to this pure wisdom,
 as thy sure conducter through the manifold dangers in this world!
 
@@ -145,7 +145,7 @@ Does malice, when ripe,
 become revengeful and in the end inflict terrible pains on their fellow-creatures,
 and spread desolations in the world?
 
-"`Do mankind, walking in uprightness, delight in each other's happiness?
+"`Do mankind, walking in uprightness, delight in each other`'s happiness?
 And do these creatures, capable of this attainment, by giving way to an evil spirit,
 employ their wit and strength to afflict and destroy one another?
 
@@ -176,20 +176,20 @@ which being agreed to, and several Friends of our meeting being united in the ex
 we proceeded therein; and through Divine favour were helped in the work,
 so that it appeared to me as a fresh reviving of godly care amongst Friends.
 In the latter part of the same winter, I joined my friend William Jones,
-in a visit to Friends' families in Mansfield;
+in a visit to Friends`' families in Mansfield;
 in which labour I had cause to admire the goodness of the Lord toward us.
 
 Having felt my mind drawn to visit Friends along
 the sea coast from Cape May to near Squan;
 and also to visit some people in those parts, amongst whom there is no settled worship;
 I joined with my beloved friend Benjamin Jones, in a visit there,
-having Friends' unity therein.
+having Friends`' unity therein.
 We set off the 24th day of the tenth month, 1765,
 and had a prosperous and very satisfactory journey; feeling at times,
 through the goodness of the heavenly Shepherd,
 the Gospel to flow freely toward a poor people scattered in those places.
 Soon after our return, I joined my friends John Sleeper and Elizabeth Smith,
-in visiting Friends' families at Burlington,
+in visiting Friends`' families at Burlington,
 there being at this time about fifty families of our Society in that city;
 and we had cause humbly to adore our heavenly Father,
 who baptized us into a feeling of the state of the people,
@@ -233,7 +233,7 @@ Some irregularities I hear have been amongst the people at several of his meetin
 but from the whole of what I have perceived, I believe the man and some of his followers,
 are honestly disposed, but that skilful fathers are wanting among them:
 from hence we went to Choptank and Third Haven;
-and thence to Queen Ann's. The weather for some days past having been hot and dry,
+and thence to Queen Ann`'s. The weather for some days past having been hot and dry,
 and in order to attend meetings pursuant to appointment,
 we having travelled pretty steadily, and had hard labour in meetings, I grew weakly;
 at which I was for a time discouraged.
@@ -274,7 +274,7 @@ and thus each one truly fearing God,
 and labouring in those works of righteousness appointed for them in their day,
 findeth acceptance with him.
 Through the darkness of the times and the corruption of manners and customs,
-some upright men may have had little more for their day's work
+some upright men may have had little more for their day`'s work
 than to attend to the righteous principle in their minds,
 as it related to their own conduct in life,
 without pointing out to others the whole extent of that,
@@ -315,7 +315,7 @@ From Sassafras we went pretty directly home, where we found our families well;
 and for several weeks after our return, I had often to look over our journey:
 and though to me it appeared as a small service,
 and that some faithful messengers will yet have more bitter
-cups to drink for Christ's sake in those Southern provinces,
+cups to drink for Christ`'s sake in those Southern provinces,
 than we had; yet I found peace in that I had been helped to walk in sincerity,
 according to the understanding and strength given me.
 
@@ -336,7 +336,7 @@ on a religious visit.
 Having obtained a certificate from Friends of our Monthly Meeting,
 I took my leave of my family under the heart-tendering operation of Truth;
 and on the 20th day of the fourth month, 1767,
-I rode to the ferry opposite to Philadelphia, and from thence walked to William Home's,
+I rode to the ferry opposite to Philadelphia, and from thence walked to William Home`'s,
 at Darby, that evening; and next day pursued my journey alone,
 and reached Concord week-day meeting.
 
@@ -392,7 +392,7 @@ receive at our hands,
 and the labours of the primitive Christians for the conversion of the Gentiles,
 was pressed home, and the power of Truth came over us; under a feeling of which,
 my mind was united to a tender-hearted people in those parts;
-and the meeting concluded in a sense of God's
+and the meeting concluded in a sense of God`'s
 goodness toward his humble dependent children.
 
 The next day was a general meeting for worship, much crowded:
@@ -403,7 +403,7 @@ in which I found inward peace; and the sincere were comforted.
 
 From hence I turned toward Pipe creek, and passed on to the Red Lands;
 and had several meetings amongst Friends in those parts.
-My heart was often tenderly affected, under a sense of the Lord's goodness,
+My heart was often tenderly affected, under a sense of the Lord`'s goodness,
 in sanctifying my troubles and exercises, turning them to my comfort, and I believe,
 to the benefit of many others; for I may say with thankfulness,
 that this visit appeared like a fresh tendering visitation in most places.
@@ -413,13 +413,13 @@ during the several days of this meeting,
 I was mercifully preserved in an inward feeling after the mind of Truth,
 and my public labours tended to my humiliation, with which I was content.
 After the Quarterly Meeting of worship ended,
-I felt drawings to go to the women's meeting of business, which was very full;
+I felt drawings to go to the women`'s meeting of business, which was very full;
 and here the humility of Jesus Christ, as a pattern for us to walk by,
 was livingly opened before me; and in treating on it my heart was enlarged,
 and it was a baptizing time.
 From hence I went on, and was at meetings at Concord, Middletown,
 Providence and Haddonfield, and so home; where I found my family well.
-A sense of the Lord's merciful preservation in this my journey,
+A sense of the Lord`'s merciful preservation in this my journey,
 excites reverent thankfulness to him.
 
 On the 2nd day of the ninth month, 1767, with the unity of Friends,
@@ -429,7 +429,7 @@ and have renewed cause to bow in reverence before the Lord, who,
 by the powerful extendings of his humbling goodness, opened my way amongst Friends,
 and made the meetings, I trust, profitable to us.
 The following winter I joined in a visit to
-Friends' families in some part of our meeting;
+Friends`' families in some part of our meeting;
 in which exercise, the pure influence of Divine love made our visits reviving.
 
 On the 5th day of the fifth month, 1768, I left home under the humbling hand of the Lord,
@@ -493,7 +493,7 @@ is not lifted up to the people by us as a Society,
 in that clearness which it might have been,
 had we been as faithful to the teachings of Christ as we ought to have been.
 As my mind hath been inward to the Lord,
-the purity of Christ's government hath been opened on my understanding;
+the purity of Christ`'s government hath been opened on my understanding;
 and under this exercise, that of Friends being active in civil society,
 in putting laws in force which are not agreeable to the purity of righteousness,
 hath for several years been an increasing burthen upon me.
