--- a/journal-writings/original/12-chapter-10.adoc
+++ b/journal-writings/original/12-chapter-10.adoc
@@ -109,7 +109,7 @@ to make them more easy respecting their conduct, than they would be,
 if the cause of universal righteousness was humbly and firmly attended to,
 by those with whom they have commerce.
 That complaint of the Lord by his prophet,
-'They have strengthened the hands of the wicked,' hath very often revived in my mind;
+'`They have strengthened the hands of the wicked,`' hath very often revived in my mind;
 and I may here add some circumstances preceding any prospect of a visit there.
 The case of David hath often been before me of late years:
 he longed for some water in a well beyond an army of Philistines, at war with Israel;
@@ -194,11 +194,11 @@ I went over amongst Friends on the Jersey shore,
 and tarried till the morning on which they had appointed to sail;
 and as I lay in bed the latter part of that night, my mind was comforted;
 and I felt what I esteemed a fresh confirmation,
-that it was the Lord's will I should pass through some further exercises near home.
+that it was the Lord`'s will I should pass through some further exercises near home.
 
 So I went home, and still felt like a sojourner with my family,
 and in the fresh spring of pure love, had some labours in a private way amongst Friends,
-on a subject relating to Truth's testimony;
+on a subject relating to Truth`'s testimony;
 under which I had frequently been exercised in heart for some years.
 I remember, as I walked on the road under this exercise,
 that passage in Ezekiel came fresh before me, "`Whithersoever their faces were turned,
@@ -211,12 +211,12 @@ I was thoughtful how it might end.
 
 I had of late, through various exercises,
 been much weaned from the pleasant things of this life;
-and I now thought if it was the Lord's will to put an end to my labours,
+and I now thought if it was the Lord`'s will to put an end to my labours,
 and graciously receive me into the arms of his mercy, death would be acceptable to me;
 but if it was his will further to refine me under affliction, and make me in any degree,
 useful in his church, I desired not to die.
 I may with thankfulness say, that in this case I felt resignedness wrought in me,
-and had no inclination to send for a doctor; believing if it was the Lord's will,
+and had no inclination to send for a doctor; believing if it was the Lord`'s will,
 through outward means, to raise me up,
 some sympathizing Friends would be sent to minister to me; who were accordingly.
 But though I was carefully attended, yet the disorder was at times so heavy,
@@ -239,7 +239,7 @@ and having a solid Friend sitting up with me, I requested him to write what I sa
 which he did, as follows:
 
 "`4th day of the first month, 1770,
-about five o'clock in the morning.--I have seen in the light of the Lord,
+about five o`'clock in the morning.--I have seen in the light of the Lord,
 that the day is approaching, when the man that is the most wise in human policy,
 shall be the greatest fool; and the arm that is mighty to support injustice,
 shall be broken to pieces.
