--- a/journal-writings/original/13-chapter-11.adoc
+++ b/journal-writings/original/13-chapter-11.adoc
@@ -65,7 +65,7 @@ which was in substance as follows:
 I told the owner that on the outside of that part of the ship where the cabin was,
 I observed sundry sorts of carved work and imagery;
 that in the cabin I observed some superfluity of workmanship of several sorts;
-and that according to the ways of men's reckoning,
+and that according to the ways of men`'s reckoning,
 the sum of money to be paid for a passage in that apartment,
 had some relation to the expense in furnishing it to please
 the minds of such who give way to a conformity to this world;
@@ -106,7 +106,7 @@ Having staid two nights in Philadelphia, I went the next day to Darby Monthly Me
 where, through the strength of Divine love,
 my heart was enlarged toward the youth then present;
 under which I was helped to labour in some tenderness of spirit.
-Then lodging at William Home's, I, with one Friend, went to Chester;
+Then lodging at William Home`'s, I, with one Friend, went to Chester;
 where meeting with Samuel Emlen, we went on board the 1st day of the fifth month, 1772:
 and as I sat alone on the deck,
 I felt a satisfactory evidence that my proceedings were not in my own will,
@@ -149,7 +149,7 @@ when placed on shipboard to learn the art of sailing!
 
 Five lads training up for the seas, were now on board of this ship;
 two of them brought up amongst our Society, and one has a right amongst Friends,
-by name James Nayler, to whose father, James Nayler mentioned in Sewel's History,
+by name James Nayler, to whose father, James Nayler mentioned in Sewel`'s History,
 appears to have been uncle.
 
 I often feel a tenderness of heart toward these poor lads;
@@ -227,7 +227,7 @@ Thus in a tender frame of mind I spoke to them of the necessity of our yielding,
 in true obedience, to the instructions of our heavenly Father,
 who sometimes through adversities, intendeth our refinement.
 
-About eleven o'clock at night I went out on the deck, when the sea wrought exceedingly,
+About eleven o`'clock at night I went out on the deck, when the sea wrought exceedingly,
 and the high foaming waves, all around, had in some sort the appearance of fire;
 but did not give much, if any light.
 The sailor then at the helm, said he lately saw a corposant at the head of the mast.
@@ -295,7 +295,7 @@ of which I heard frequent conversation among the sailors!
 A great trade in that which is raised and prepared through grievous oppression!
 
 A great trade in superfluity of workmanship formed to
-please the pride and vanity of people's minds!
+please the pride and vanity of people`'s minds!
 
 Great and extensive is that depravity which prevails amongst the poor sailors!
 
@@ -510,7 +510,7 @@ they become extensively careful to give no offence, either to Jews, or heathen,
 or the church of Christ.
 
 On the 31st day of the month, and first of the week, we had a meeting in the cabin,
-with nearly all the ship's company; the whole being nearly thirty.
+with nearly all the ship`'s company; the whole being nearly thirty.
 In this meeting the Lord, in mercy, favoured us with the extendings of his love.
 
 The 2nd day of the sixth month.
@@ -560,7 +560,7 @@ about seventy-two miles by land; but I felt easy in staying in the ship.
 
 The 7th day of the month, and first of the week.
 A clear morning; we lay at anchor for the tide,
-and had a parting meeting with the ship's company;
+and had a parting meeting with the ship`'s company;
 in which my heart was enlarged in a fervent concern for them,
 that they may come to experience salvation through Christ.
 Had a head wind up the Thames; sometimes lay at anchor, and saw many ships passing,
