--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -74,7 +74,7 @@ One formerly speaking on the profitableness of true humility, saith,
 "`He that troubles not himself with anxious thoughts for more than is necessary,
 lives little less than the life of angels; whilst by a mind content with little,
 he imitates their want of nothing.`"
-Cave's Primitive Christianity, page 31.
+Cave`'s Primitive Christianity, page 31.
 
 "`It is not enough, says Tertullian, that a Christian be chaste and modest,
 but he must appear to be so: a virtue of which he should have so great a store,
@@ -228,7 +228,7 @@ that we who are convinced of the pure leadings of Truth,
 may bow in the deepest reverence, and so watchfully regard this leader,
 that many who are grievously entangled in a wilderness of vain customs,
 may look upon us and be instructed.
-And O that such who have plenty of this world's goods,
+And O that such who have plenty of this world`'s goods,
 may be faithful in that with which they are entrusted,
 and example others in the true Christian walking.
 
@@ -257,8 +257,8 @@ wrote a letter to his friends out of prison a short time before he was burnt,
 in which are these expressions;
 "`Consider your dignity as children of God and temples of the Holy Ghost,
 and members of Christ; be ashamed therefore to think, speak, or do any thing unseemly,
-for God's children and the members of Christ.`"
-Fox's Acts and Monuments, page 1177.
+for God`'s children and the members of Christ.`"
+Fox`'s Acts and Monuments, page 1177.
 
 === Chapter II.On the example of Christ.
 
@@ -306,7 +306,7 @@ and the way opened for a harmonious walking together.
 Jesus Christ in promoting the happiness of others,
 was not deficient in looking for the helpless, who lay in obscurity,
 nor did he save any thing to render himself honourable amongst men,
-which might have been of more use to the weak members in his Father's family;
+which might have been of more use to the weak members in his Father`'s family;
 of whose compassion towards us I may now speak a little.
 He who was perfectly happy in himself, moved with infinite love,
 "`took not upon him the nature of angels,`" but our imperfect natures,
@@ -407,10 +407,10 @@ The prophet Isaiah spoke of the gathered church, in the similitude of a city,
 where many being employed were all preserved in purity;
 "`They shall call them the holy people, the redeemed of the Lord,
 and thou shalt be called, sought out, a city not forsaken.`"
-The apostle after mentioning the mystery of Christ's sufferings,
+The apostle after mentioning the mystery of Christ`'s sufferings,
 exhorts "`Be ye holy in all manner of conversation.`"
 There is a conversation necessary in trade;
-and there is a conversation so foreign from the nature of Christ's kingdom,
+and there is a conversation so foreign from the nature of Christ`'s kingdom,
 that it is represented in the similitude of one
 man pushing another with a warlike weapon;
 "`There is that speaketh like the piercing of a sword.`"
@@ -543,7 +543,7 @@ to behold the peaceable harmonious nature of his kingdom,
 "`thine eyes shall see the King in his beauty;`" and that
 looking beyond all the afflictions which attend the righteous,
 to "`a habitation eternal in the heavens,`" with an eye divinely opened,
-they "`shall behold the land that is 'very far off.`"
+they "`shall behold the land that is '`very far off.`"
 
 "`He shall dwell on high, his place of defence shall be the munitions of rocks,
 bread shall be given him, his water shall be sure.
@@ -617,13 +617,13 @@ Bishop Latimer, when sentence of death by fire, was pronounced against him,
 on account of his firmness in the cause of religion, said, "`I thank God most heartily,
 that he hath prolonged my life to this end; that I may,
 in this case glorify him by this kind of death.`"
-Fox's Acts and Monuments, 936.
+Fox`'s Acts and Monuments, 936.
 
 William Dewsbury, who had suffered much for his religion, in his last sickness,
 encouraging his friends to faithfulness, made mention, like good old Jacob,
 of the loving-kindness of God to him in the course of his life,
 and that through the power of Divine love,
-he for Christ's sake had joyfully entered prisons.
+he for Christ`'s sake had joyfully entered prisons.
 
 I mention these, as a few examples, out of many,
 of the powerful operation of the Spirit of Christ, where people are fully devoted to it,
@@ -662,7 +662,7 @@ might be taken off in great sheets.
 
 These devouring creatures appearing seldom, and coming in such multitudes,
 their generation appears different from most other reptiles,
-and by the prophet they were called "`God's army sent amongst the people.`"
+and by the prophet they were called "`God`'s army sent amongst the people.`"
 
 There have been tempests of hail,
 which have very much destroyed the grain where they extended.
