--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -149,7 +149,7 @@ not only those blessings which are spiritual,
 but also feel a sweetness and satisfaction in a right
 use of the good gifts of God in the visible creation.
 
-Here we see that man's happiness stands not in great possessions,
+Here we see that man`'s happiness stands not in great possessions,
 but in a heart devoted Jo follow Christ, in that use of things,
 where customs contrary to universal love have no power over us.
 
@@ -343,7 +343,7 @@ than that which they were used to at home, that with grief,
 with different diet from what has been common with them, and with hard labour,
 some thousands are computed to die every year, in what is called the seasoning.
 
-+++[+++Note from the Editors of the original Friend's Library:
++++[+++Note from the Editors of the original Friend`'s Library:
 In perusing the writings of this worthy man,
 the reader cannot fail to observe how large a portion of his attention was occupied
 in contemplating the wrongs and cruelties of negro slavery and the slave trade,
@@ -443,7 +443,7 @@ the sale of which would produce a handsome sum,
 seldom escapes the notice of his chieftain.
 Crimes are invented and promoted, and accusations multiplied,
 solely with the hope of procuring condemnations, the punishment annexed to which is,
-'Sale to the Slave Merchant.'
+'`Sale to the Slave Merchant.`'
 Many are the victims of a system of avowed rapine and plunder--
 peacefully pursuing their agricultural or mechanical occupations,
 they are seized by ruffians who had concealed themselves in ambush, are gagged, bound,
@@ -666,7 +666,7 @@ that in a little time there was only one man left who could steer the ship.
 At this period a large ship approached the Rodeur,
 which appeared to be totally at the mercy of the winds and waves.
 She was the Spanish slave ship St. Leon.
-Her crew, hearing the voices of the Rodeur's men, cried out most vehemently for help.
+Her crew, hearing the voices of the Rodeur`'s men, cried out most vehemently for help.
 They told the melancholy tale as they passed along,
 that the contagion had seized the eyes of all on board,
 and that there was not one individual left, either sailor or slave, who could see!
@@ -788,11 +788,11 @@ with the assistance of the slave factors, he got every thing put to rights,
 took in slaves to supply the number he had killed, and bore away for Havanna.
 
 Captain Hayes, R. N., mentions the case of a slaver,
-having a large cargo of human beings chained together: 'The master of the vessel,
+having a large cargo of human beings chained together: '`The master of the vessel,
 with more humanity than his fellows, permitted some of them to come on deck,
 but still chained together, for the benefit of the air,
 when they immediately commenced jumping overboard, hand in hand,
-and drowning in couples.'
+and drowning in couples.`'
 He explains the cause of this circumstance by saying,
 they were just brought from a situation between decks,
 and to which they knew they must return,
@@ -802,8 +802,8 @@ and where it is no uncommon occurrence for women to be bringing forth children,
 and men dying by their side, with, full in their view,
 living and dead bodies chained together, and the living,
 in addition to all their other torments, labouring under the most famishing thirst,
-being in very few instances allowed more than a pint of water a day.'
-He goes on to say, "`I have now an officer on board the 'Dryad,' who,
+being in very few instances allowed more than a pint of water a day.`'
+He goes on to say, "`I have now an officer on board the '`Dryad,`' who,
 on examining one of these slave vessels,
 found not only living men chained to dead bodies, but the latter in a putrid state;
 and we have now a case which, if true, is too horrible and disgusting to be described.`"
@@ -817,8 +817,8 @@ declared he would never hesitate to throw the slaves overboard, to prevent being
 
 "`Captain Wauchope in the same letter informs, that on the 18th of ninth month, 1836,
 the Thalia captured the Portuguese brig Felix, five hundred and ninety slaves on board.
-'After capture,' he says, 'I went on board,
-and such a scene of horror it is not easy to describe; the long'-boat on the booms,
+'`After capture,`' he says, '`I went on board,
+and such a scene of horror it is not easy to describe; the long`'-boat on the booms,
 and the deck aft, were crowded with little children, sickly, poor little unhappy things,
 some of them rather pretty, and some much marked and tattoed;
 much pains must have been taken by their miserable parents to ornament and beautify them.
@@ -843,7 +843,7 @@ The colour of these poor creatures was of a dark squalid yellow,
 so different from the fine glossy black of our liberated Africans and Kroomen.
 I was shown a man much bit and bruised;
 it was done in a struggle at the gratings of their hatchways,
-for a mouthful of fresh air.'
+for a mouthful of fresh air.`'
 
 "`The Carolina, captured in 1834, off Wydah.
 This vessel was only seventy-five tons burden,
@@ -867,9 +867,9 @@ the close manner in which they were packed,
 like herrings in a barrel, and the length of time they had been on their voyage,
 and the cold they had endured in rounding the Cape, in a state of nudity,
 that it took the utmost exertions of the English sailors, favoured by a hot sun,
-to straighten them.'
+to straighten them.`'
 In a letter from Colonel NicoUs, at the Bahamas, of date 1st of eighth month, 1837,
-it is stated that 'the Esperanza, a Spanish slave schooner,
+it is stated that '`the Esperanza, a Spanish slave schooner,
 had been wrecked on one of these islands during the preceding month.
 It was ascertained that this vessel had embarked three
 hundred and twenty negroes on the coast of Africa;
@@ -877,7 +877,7 @@ of these only two hundred and twenty were landed at the time of the wreck.
 It appears that between sixty and seventy murders had been
 committed daring the voyage on the helpless Africans;
 and in this manner:--When any of the slaves refused their food or became sick,
-the boatswain's mate, with a weighty club struck them on the back of the neck,
+the boatswain`'s mate, with a weighty club struck them on the back of the neck,
 when they fell, and were thrown overboard.`"
 
 Shocking as these details are, the truth of them is indisputable;
@@ -1019,7 +1019,7 @@ which manifestly tend to stir up wrath and increase wars and desolations,
 has often covered my mind with sorrow.
 
 If we bring this matter home, and as Job proposed to his friends,
-"`Put our soul in their soul's stead;`" if we consider
+"`Put our soul in their soul`'s stead;`" if we consider
 ourselves and our children as exposed to the hardships which
 these people lie under in supporting an imaginary greatness,
 and in such case, beheld an increase of luxury and superfluity amongst our oppressors,
@@ -1064,7 +1064,7 @@ who never injured us.
 Were we for the term of one year only to be eye
 witnesses to what passes in getting these slaves;
 Was the blood which is there shed to be sprinkled on our garments;
-Were the poor captives bound with thongs and heavy laden with elephants' teeth,
+Were the poor captives bound with thongs and heavy laden with elephants`' teeth,
 to pass before our eyes on their way to the sea:
 Were their bitter lamentations day after day to ring in our ears,
 and their mournful cries in the night to hinder us from sleeping:
@@ -1173,16 +1173,16 @@ George Fox, in an epistle writes thus: "`Friends, stand in the eternal power of 
 witnesses against the pomps and vanities of this world.
 
 "`Such tradesmen who stand as witnesses in the power of God,
-cannot fulfill the people's minds in these vanities,
+cannot fulfill the people`'s minds in these vanities,
 and therefore they are offended at them.
 
 "`Let all trust in the Lord, and wait patiently on him;
 for when Truth first broke forth in London,
 many tradesmen could not take so much money in their shops for some time,
-as would buy them bread and water, because they withstood the world's ways,
+as would buy them bread and water, because they withstood the world`'s ways,
 fashions and customs;
 yet by their patient waiting on the Lord in their good life and conversation,
-they answered the Truth in people's hearts, and thus their business increased.`"
+they answered the Truth in people`'s hearts, and thus their business increased.`"
 Book of Doctrinals, page 824.
 
 Christ our holy leader graciously continueth to open the understandings of his people,
@@ -1203,7 +1203,7 @@ The apostle speaking on this subject, asketh this question;
 "`What fellowship hath righteousness with unrighteousness?`"
 And again saith, "`Have no fellowship with the unfruitful works of darkness,
 but rather reprove them.`"
-Again, "`Be not partaker of other men's sins, keep thyself pure.`"
+Again, "`Be not partaker of other men`'s sins, keep thyself pure.`"
 
 Where people through the power of Christ are thoroughly settled in a right use of things,
 and freed from all unnecessary care and expense,
@@ -1233,7 +1233,7 @@ and I often feel tender compassion toward a young generation,
 with desires that their difficulties may not be increased
 through unfaithfulness in us of the present age.
 
-=== Chapter II.On a Sailor's life.
+=== Chapter II.On a Sailor`'s life.
 
 In the trade to Africa for slaves, and in the management of ships going on these voyages,
 many of our lads and young men have a considerable part of their education.
@@ -1278,7 +1278,7 @@ and in the path of pure wisdom, labour would be an agreeable, healthful employme
 In the opening of these things in my mind,
 I feel a living concern that we who have felt Divine
 love in our hearts may faithfully abide in it,
-and like good soldiers endure hardness for Christ's sake.
+and like good soldiers endure hardness for Christ`'s sake.
 
 He, our blessed Saviour, exhorting his followers to love one another, adds,
 "`As I have loved you.`"
@@ -1327,7 +1327,7 @@ Amongst the poor there are some that are weak through age, and others of a weakl
 who pass through straits in very private life, without asking relief from the public.
 
 Those who are strong and healthy may do business, which to the weakly may be oppressive;
-and in performing that in a day which is esteemed a day's labour,
+and in performing that in a day which is esteemed a day`'s labour,
 weakly persons in the field and in the shops,
 and weakly women who spin and knit in the manufactories, often pass through weariness;
 and many sighs I believe are uttered in secret,
@@ -1405,7 +1405,7 @@ I feel tender desires that we who sometimes meet in silence,
 may never by our conduct lay stumbling blocks in the way of others,
 and hinder the progress of the reformation in the world.
 
-It was a complaint against some who were called the Lord's people,
+It was a complaint against some who were called the Lord`'s people,
 that they brought polluted bread to his altar,
 and said the table of the Lord was contemptible.
 
