--- a/journal-writings/modernized/04-chapter-2.adoc
+++ b/journal-writings/modernized/04-chapter-2.adoc
@@ -23,7 +23,7 @@ in both these meetings my ancient companion was enlarged to preach,
 in the love of the Gospel.
 
 From there we went to Woodbridge, Rahway, and Plainfield;
-and had six or seven meetings in places where Friends' meetings are not usually held,
+and had six or seven meetings in places where Friends`' meetings are not usually held,
 being made up chiefly of Presbyterians,
 and my beloved companion was frequently strengthened to
 publish the word of life amongst them.
@@ -87,7 +87,7 @@ this desire arose to a degree of fervent supplication,
 wherein my soul was so environed with heavenly light and consolation,
 that things were made easy to me which had been otherwise.
 
-After some time, my employer's wife died; she was a virtuous woman,
+After some time, my employer`'s wife died; she was a virtuous woman,
 and generally beloved of her neighbors: and soon after this, he left shop-keeping;
 and we parted.
 I then wrought at my trade, as a tailor;
@@ -128,7 +128,7 @@ we set off in the afternoon for the old settlements of Friends in Virginia;
 and the first night, we, with our pilot, lodged in the woods, our horses feeding near us;
 but he being poorly provided with a horse, and we young and having good horses,
 were free to part with him; and next day did so.
-In two days after, we reached our friend John Cheagle's, in Virginia;
+In two days after, we reached our friend John Cheagle`'s, in Virginia;
 and taking the meetings in our way through Virginia, were in some degree,
 baptized into a feeling of the conditions of the people;
 and our exercise in general was more painful in these old settlements,
@@ -149,7 +149,7 @@ some of whom had lately joined in membership with our Society.
 In our journeying to and fro, we found some honest-hearted Friends,
 who appeared to be concerned for the cause of Truth, among a backsliding people.
 
-From Virginia, we crossed over the river Potomac, at Hoe's ferry,
+From Virginia, we crossed over the river Potomac, at Hoe`'s ferry,
 and made a general visit to the meetings of Friends on the Western Shore of Maryland,
 and were at their Quarterly Meeting.
 We had some hard labor amongst them,
@@ -218,7 +218,7 @@ Elizabeth expressed her contentment under it; signifying,
 she believed it might be for their good.
 
 A few years after she attained to mature age,
-through the gracious visitations of God's love,
+through the gracious visitations of God`'s love,
 she was strengthened to live a self-denying exemplary life,
 giving herself much to reading and meditation.
 The following letter may show, in some degree, her disposition: Haddonfield,
