--- a/journal-writings/original/08-chapter-6.adoc
+++ b/journal-writings/original/08-chapter-6.adoc
@@ -22,14 +22,14 @@ and through Divine goodness, we were favoured with a strengthening opportunity t
 
 After this meeting I joined with my friends Daniel Stanton and John Scarborough,
 in visiting Friends who had slaves;
-and at night we had a family meeting at William Trimble's, many young people being there;
+and at night we had a family meeting at William Trimble`'s, many young people being there;
 and it was a precious reviving opportunity.
 Next morning we had a comfortable sitting with a sick neighbour;
 and thence to the burial of the corpse of a Friend at Uwchland meeting,
 at which were many people, and it was a time of Divine favour; after which,
-we visited some who had slaves; and at night had a family meeting at a Friend's house,
+we visited some who had slaves; and at night had a family meeting at a Friend`'s house,
 where the channel of Gospel love was opened,
-and my mind was comforted after a hard day's labour.
+and my mind was comforted after a hard day`'s labour.
 
 The next day we were at Goshen Monthly Meeting:
 and thence on the 18th day of the eleventh month, in the year 1758,
@@ -57,7 +57,7 @@ instead of forwarding, we hinder business,
 and make more labour for those on whom the burden of the work is laid.
 
 If selfish views or a partial spirit have any room in our minds,
-we are unfit for the Lord's work; if we have a clear prospect of the business,
+we are unfit for the Lord`'s work; if we have a clear prospect of the business,
 and proper weight on our minds to speak,
 it behoves us to avoid useless apologies and repetitions.
 Where people are gathered from afar,
@@ -219,7 +219,7 @@ when the earth is so generally polluted with wickedness,
 gave us a being in a part so signally favoured with tranquillity and plenty,
 and in which the glad tidings of the Gospel of Christ are so freely published,
 that we may justly say with the psalmist,
-'What shall we render unto the Lord for all his benefits'?
+'`What shall we render unto the Lord for all his benefits`'?
 
 "`Our own real good,
 and the good of our posterity in some measure depend on the part we act;
@@ -232,27 +232,27 @@ is a choice well becoming a free intelligent creature.
 We shall thus clearly see and consider that the
 dealings of God with mankind in a national capacity,
 as recorded in holy writ, sufficiently evidence the truth of that saying,
-'it is righteousness which exalteth a nation;' and though he doth not at all
+'`it is righteousness which exalteth a nation;`' and though he doth not at all
 times suddenly execute his judgments on a sinful people in this life,
-yet we see by many instances, that where 'men follow lying vanities,
-they forsake their own mercies.'
+yet we see by many instances, that where '`men follow lying vanities,
+they forsake their own mercies.`'
 As a proud selfish spirit prevails and spreads among a people, so partial judgment,
 oppression, discord, envy and confusions increase,
 and provinces and kingdoms are made to drink the
 cup of adversity as a reward of their own doings.
 Thus the inspired prophet, reasoning with the degenerated Jews, saith,
-'Thine own wickedness shall correct thee, and thy backslidings shall reprove thee:
+'`Thine own wickedness shall correct thee, and thy backslidings shall reprove thee:
 know therefore, that it is an evil thing and bitter,
 that thou hast forsaken the Lord thy God, and that my fear is not in thee,
-saith the Lord God of hosts.'
+saith the Lord God of hosts.`'
 
 "`The God of our fathers, who hath bestowed on us many benefits,
 furnished a table for us in the wilderness,
 and made the deserts and solitary places to rejoice,
 doth now mercifully call upon us to serve him more faithfully.
-We may truly say with the prophet, 'it is his voice which crieth to the city,
+We may truly say with the prophet, '`it is his voice which crieth to the city,
 and men of wisdom see his name: They regard the rod,
-and him who hath appointed it.'--People who look chiefly at things outward,
+and him who hath appointed it.`'--People who look chiefly at things outward,
 too little consider the original cause of the present troubles;
 but such who fear the Lord, and think often upon his name,
 they see and feel that a wrong spirit is spreading among the inhabitants of our country;
@@ -278,7 +278,7 @@ Some were at that time in great distress,
 and had occasion to consider that their lives had been too little
 conformable to the purity and spirituality of that religion which we profess,
 and found themselves too little acquainted with that inward humility,
-in which true fortitude to endure hardness for the Truth's sake is experienced.
+in which true fortitude to endure hardness for the Truth`'s sake is experienced.
 Many parents were concerned for their children,
 and in that time of trial were led to consider,
 that their care to get outward treasure for them,
@@ -287,8 +287,8 @@ in that religion which crucifieth to the world,
 and enableth to bear a clear testimony to the peaceable government of the Messiah.
 These troubles are removed, and for a time we are released from them.
 
-"`Let us not forget that 'the Most High hath his way in the deep,
-in clouds and in thick darkness'--that it is his voice
+"`Let us not forget that '`the Most High hath his way in the deep,
+in clouds and in thick darkness`'--that it is his voice
 which crieth to the city and to the country;
 and oh! that these loud and awakening cries, may have a proper effect upon us,
 that heavier chastisement may not become necessary!
@@ -340,14 +340,14 @@ from a real sense of the love of Christ influencing our minds thereto,
 is more likely to bring a blessing to our children,
 and will afford more satisfaction to a Christian favoured with plenty,
 than an earnest desire to collect much wealth to leave behind us;
-for 'here we have no continuing city;' may we
+for '`here we have no continuing city;`' may we
 therefore diligently seek one that is to come,
 whose builder and maker is God.
 
-"`'Finally, brethren, whatsoever things are true, whatsoever things are just,
+"`'`Finally, brethren, whatsoever things are true, whatsoever things are just,
 whatsoever things are pure, whatsoever things are lovely,
 whatsoever things are of good report; if there be any virtue, if there be any praise,
-think on these things and do them, and the God of peace shall be with you.'
+think on these things and do them, and the God of peace shall be with you.`'
 
 "`Signed by appointment, and on behalf of our said meeting, by seven Friends.`"
 
@@ -382,7 +382,7 @@ yet through the strength of that love which is stronger than death,
 tenderness of heart was often felt amongst us in our visits,
 and we parted from several families with greater satisfaction than we expected.
 
-We visited Joseph White's family, he being in England;
+We visited Joseph White`'s family, he being in England;
 had also a family sitting at the house of an elder who bore us company,
 and was at Makefield on a first-day;
 at all which times my heart was truly thankful to the Lord,
