--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -114,7 +114,7 @@ however used amongst religious people.
 
 As he is the perfection of power, of wisdom and of goodness,
 so I believe he hath provided that so much labour shall
-be necessary for men's support in this world,
+be necessary for men`'s support in this world,
 as would, being rightly divided, be a suitable employment of their time;
 and that we cannot go into superfluities,
 or grasp after wealth in a way contrary to his wisdom,
@@ -235,7 +235,7 @@ Being informed thereof by letter, I met them in town in the fifth month, 1763;
 and after some conversation, finding they were sober people,
 with the concurrence of Friends in that place,
 I agreed to join them as companions in their return.
-On the 7th day of the sixth month following, we appointed to meet at Samuel Foulk's,
+On the 7th day of the sixth month following, we appointed to meet at Samuel Foulk`'s,
 at Richland, in Bucks county.
 As this visit felt weighty,
 and was performed at a time when travelling appeared perilous,
@@ -247,7 +247,7 @@ the thoughts of the journey were often attended with unusual sadness;
 in which times my heart was frequently turned to the
 Lord with inward breathings for his heavenly support,
 that I might not fail to follow him wheresoever he might lead me.
-Being at our Youths' meeting at Chesterfield,
+Being at our Youths`' meeting at Chesterfield,
 about a week before the time I expected to set off,
 I was there led to speak on that prayer of our Redeemer to his Father;
 "`I pray not that thou shouldst take them out of the world,
@@ -301,7 +301,7 @@ to be disposed of as he saw best.
 I took leave of my family and neighbours in much bowedness of spirit,
 and went to our Monthly Meeting at Burlington; and after taking leave of Friends there,
 I crossed the river accompanied by my friends Israel and John Pemberton;
-and parting the next morning with Israel, John bore me company to Samuel Foulk's;
+and parting the next morning with Israel, John bore me company to Samuel Foulk`'s;
 where I met the before mentioned Indians, and we were glad to see each other.
 Here my friend Benjamin Parvin met me, and proposed joining as a companion,
 we having passed some letters before on the subject;
@@ -377,7 +377,7 @@ having laboured hard in crossing some of those mountains called the Blue Ridge;
 and by the roughness of the stones and the cavities between them,
 and the steepness of the hills, it appeared dangerous: but we were preserved in safety,
 through the kindness of Him whose works in those mountainous deserts appeared awful;
-toward whom my heart was 'turned during this day's travel.
+toward whom my heart was '`turned during this day`'s travel.
 
 Near our tent, on the sides of large trees peeled for that purpose,
 were various representations of men going to and returning from the wars,
@@ -409,7 +409,7 @@ and in the morning feeling a little unwell, I went into the river; the water was
 but soon after I felt fresh and well.
 
 The 11th day of the sixth month, the bushes being wet,
-we tarried in our tent till about eight o'clock; when going on,
+we tarried in our tent till about eight o`'clock; when going on,
 crossed a high mountain supposed to be upward of four miles over;
 the steepness on the north side exceeding all the others: we also crossed two swamps;
 and it raining near night, we pitched our tent and lodged.
@@ -439,7 +439,7 @@ and bring me into a nearer sympathy with them:
 and as mine eye was to the great Father of mercies,
 humbly desiring to learn what his will was concerning me, I was made quiet and content.
 
-Our guide's horse, though hoppled, went away in the night; and after finding our own,
+Our guide`'s horse, though hoppled, went away in the night; and after finding our own,
 and searching some time for him,
 his footsteps were discovered in the path going back again,
 whereupon my kind companion went off in the rain,
@@ -536,7 +536,7 @@ Hearing the news brought by these Indian runners,
 and being told by the Indians where we lodged, that the Indians living about Wyoming,
 expected in a few days to move to some larger towns,
 I thought that to all outward appearance, it was dangerous travelling at this time.
-After a hard day's journey, I was brought into a painful exercise at night,
+After a hard day`'s journey, I was brought into a painful exercise at night,
 in which I had to trace back and view over the steps I
 had taken from my first moving in the visit;
 and though I had to bewail some weakness which at times had attended me,
@@ -573,9 +573,9 @@ and after eating dinner with them, made them some small presents.
 Then putting our baggage in the canoe, some of them pushed slowly up the stream,
 and the rest of us rode our horses; and swimming them over a creek called Lahawahamunk,
 we pitched our tent a little above it, there being a shower in the evening:
-and in a sense of God's goodness in helping me in my distress,
+and in a sense of God`'s goodness in helping me in my distress,
 sustaining me under trials and inclining my heart to trust in him,
-I lay down in an humble bowed frame of mind, and had a comfortable night's lodging.
+I lay down in an humble bowed frame of mind, and had a comfortable night`'s lodging.
 
 On the 15th day of the sixth month,
 we proceeded until the afternoon ,• when a storm appearing,
@@ -627,7 +627,7 @@ By the direction of our guide we sat down on a log,
 and he went to the town to tell the people we were come.
 My companion and I sitting thus together, in a deep inward stillness,
 the poor woman came and sat near us; and great awfulness coming over us,
-we i-ejoiced in a sense of God's love manifested to our poor souls.
+we i-ejoiced in a sense of God`'s love manifested to our poor souls.
 After awhile we heard a conk-shell blow several times,
 and then came John Curtis and another Indian man,
 who kindly invited us into a house near the town, where we found, I suppose,
@@ -788,7 +788,7 @@ We forded the westerly branch of the Delaware three times, and thereby had a sho
 and missed going over the top of the Blue mountains, called the Second Ridge.
 In the second time fording, where the river cuts through the mountain,
 the waters being rapid and pretty deep,
-and my companion's mare being a tall tractable animal,
+and my companion`'s mare being a tall tractable animal,
 he sundry times drove her through the river,
 and they loaded her with the burthens of some small horses,
 which they thought not sufficient to come through with their loads.
@@ -815,7 +815,7 @@ affairs with the Indians relative to our journey,
 we took leave of them, and I thought they generally parted with us affectionately.
 We got to Richland, and had a very comfortable meeting amongst our friends:
 here I parted with my kind friend and companion Benjamin Parvin;
-and accompanied by my friend Samuel Foulk, we rode to John Cadwallader's,
+and accompanied by my friend Samuel Foulk, we rode to John Cadwallader`'s,
 from whence I reached home the next day, where I found my family middling well;
 and they and my friends all along appeared glad to see me
 return from a journey which they apprehended dangerous.
