--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -100,7 +100,7 @@ that we are subject to the like afflictions and infirmities of body,
 the like disorders and frailties in mind, the like temptations, the same death,
 and the same judgment, and that the all-wise Being is Judge and Lord over us all,
 it seems to raise an idea of general brotherhood,
-and a disposition easy to be touched with a feeling of each other's afflictions:
+and a disposition easy to be touched with a feeling of each other`'s afflictions:
 but when we forget those things, and look chiefly at our outward circumstances,
 in this and some ages past,
 constantly retaining in our minds the distinction between us and them,
@@ -145,7 +145,7 @@ the Jewish Christians would not so much as eat, was strange to them.
 All they of the circumcision were astonished to see it;
 and the apostles and brethren of Judea contended with Peter about it,
 till he having rehearsed the whole matter,
-and fully shown that the Father's love was unlimited,
+and fully shown that the Father`'s love was unlimited,
 they are thereat struck with admiration, and cry out,
 "`Then hath God also to the Gentiles granted repentance unto life.`"
 
@@ -165,7 +165,7 @@ it proved matter of offence and astonishment.
 
 To consider mankind otherwise than brethren, to think favours are peculiar to one nation,
 and to exclude others, plainly supposes a darkness in the understanding:
-for as God's love is universal, so where the mind is sufficiently influenced by it,
+for as God`'s love is universal, so where the mind is sufficiently influenced by it,
 it begets a likeness of itself, and the heart is enlarged towards all men.
 Again, to conclude a people froward, perverse, and worse by nature than others,
 who ungratefully receive favours, and apply them to bad ends,
@@ -224,7 +224,7 @@ agreeably to the doctrine of Christ Jesus.
 "`He hath laid down the best criterion,
 by which mankind ought to judge of their own conduct,
 and others judge for them of theirs, one towards another,
-viz. 'Whatsoever ye would that men should do unto you, do ye even so to them.'
+viz. '`Whatsoever ye would that men should do unto you, do ye even so to them.`'
 I take it, that all men by nature, are equally entitled to the equity of this rule,
 and under the indispensable obligations of it.
 One man ought not to look upon another man or society of men, as so far beneath him,
@@ -290,7 +290,7 @@ a more happy situation than can ever be promised
 by the utmost reach of art and power united,
 not proceeding from heavenly wisdom.
 
-A supply to nature's lawful wants, joined with a peaceful humble mind,
+A supply to nature`'s lawful wants, joined with a peaceful humble mind,
 is the truest happiness in this life; and if we arrive at this,
 and continue to walk in the path of the just, our case will be truly happy.
 Though herein we may part with, or miss of the glaring show of riches,
@@ -518,7 +518,7 @@ First Printed in the Year 1762.
 
 "`Ye shall not respect persons in judgment;
 but ye shall hear the small as well as the great:
-ye shall not be afraid of the face of man; for the judgment is God's.`" Duet. 1:17.
+ye shall not be afraid of the face of man; for the judgment is God`'s.`" Duet. 1:17.
 
 === Preface.
 
@@ -679,7 +679,7 @@ where mention is only made of the heads of the family committing wickedness;
 and it is likely that the degenerate Jews,
 misunderstanding some occurrences of this kind,
 took occasion to charge God with being unequal; so that a saying became common,
-"`The Fathers have eaten sour grapes, and the children's teeth are set on edge.`"
+"`The Fathers have eaten sour grapes, and the children`'s teeth are set on edge.`"
 Jeremiah and Ezekiel, two of the inspired prophets, who lived near the same time,
 were concerned to correct this error.
 Ezekiel is large on the subject.
@@ -801,7 +801,7 @@ against which Israel went to battle, unto whom they were to proclaim peace,
 and if the inhabitants made answer of peace, and opened their gates,
 they were not to destroy them, but make them tributaries.
 
-The children of Israel were then the Lord's host,
+The children of Israel were then the Lord`'s host,
 and executioners of his judgments on people hardened in wickedness.
 They were not to go to battle, but by his appointment.
 The men who were chief in his army, had their instructions from the Almighty;
@@ -894,7 +894,7 @@ is far from being a clear case.
 
 Making constructions of the law contrary to the true meaning of it,
 was common amongst that people.
-Samuel's sons took bribes, and perverted judgment.
+Samuel`'s sons took bribes, and perverted judgment.
 Isaiah complained that they justified the wicked for reward.
 Zephaniah, cotemporary with Jeremiah,
 on account of the injustice of the civil magistrates,
@@ -912,7 +912,7 @@ These corruptions continued till the days of our Saviour, who told the Pharisees
 Thus it appears that they corrupted the law of Moses;
 nor is it unlikely that among many others this was one;
 for oppressing the strangers was a heavy charge against the Jews,
-and very often strongly represented by the Lord's faithful prophets.
+and very often strongly represented by the Lord`'s faithful prophets.
 
 That the liberty of man was, by the inspired law-giver esteemed precious,
 appears in this; that such who unjustly deprived men of it,
@@ -975,7 +975,7 @@ and passed between the parts of the calf, I will give into the hands of their en
 and their dead bodies shall be for meat unto the fowls of the heaven,
 and the beasts of the earth.`"
 
-Soon after this their city was taken and burnt; the king's sons and the princes slain;
+Soon after this their city was taken and burnt; the king`'s sons and the princes slain;
 and the king, with the chief men of his kingdom, carried captive to Babylon.
 Ezekiel, prophesying the return of that people to their own land, directs,
 "`Ye shall divide the land by lot, for an inheritance unto you,
@@ -1091,7 +1091,7 @@ that for them to serve us in moderation, so far as relates to the right use of t
 looks consonant to the design of our Creator.
 
 There is nothing in their frame which argues the contrary; but in men there is.
-The frame of men's bodies, and the dispositions of their minds are different;
+The frame of men`'s bodies, and the dispositions of their minds are different;
 some who are tough and strong, and their minds active,
 choose ways of life requiring much labour to support them; others are soon weary;
 and though use makes labour more tolerable, yet some are less apt for toil than others,
@@ -1340,7 +1340,7 @@ which amounts to about one hundred pounds, in Guinea value, as the goods must se
 After which we have free license to trade,
 which is published throughout the whole land by the crier.
 And yet before we can deal with any person,
-we are obliged to buy the king's whole stock of slaves, at a set price;
+we are obliged to buy the king`'s whole stock of slaves, at a set price;
 which is commonly one third or fourth higher than ordinary.
 After which we have free leave to deal with all his subjects, of what rank so ever.
 But if there happen to be no stock of slaves,
@@ -1411,7 +1411,7 @@ but sent them back to him.
 I afterwards told him, I came not into his country to make slaves;
 but rather to deliver those from the slavery of the devil,
 whom he kept in miserable thraldom.
-The ship I went aboard was loaded with elephants' teeth,
+The ship I went aboard was loaded with elephants`' teeth,
 and slaves to the number of six hundred and eighty men, women and children.
 It was a pitiful sight to behold how all these people were bestowed.
 The men were standing in the hold, fastened one to another with stakes,
@@ -1455,7 +1455,7 @@ they could never make them eat nor drink after they came in the vessel;
 but in a desperate resolution starved themselves to death,
 behaving toward the last like mad-men.`"
 
-In Randall's Geography, printed 1744, we are informed,
+In Randall`'s Geography, printed 1744, we are informed,
 "`That in a time of full peace nothing is more common than for
 the negroes of one nation to steal those of another,
 and sell them to the Europeans.
@@ -1497,7 +1497,7 @@ but they had this objection against them.
 That they obstinately persisted in opposition to the holy mother church,
 and being heretics, it was right to work their ruin and extirpation,
 and raze out their memory from among men.
-Fox's Acts and Monuments, page 646.
+Fox`'s Acts and Monuments, page 646.
 
 In favour of those cruelties, every one had what they deemed a plea.
 These scenes of blood and cruelty among the barbarous inhabitants of Guinea,
@@ -1635,7 +1635,7 @@ and then put them to hard labour, and ever after considered them as slaves,
 the action would be looked upon as unrighteous.
 
 If those negro merchants should have children after being among us,
-whose endowments and conduct were like other people's in common,
+whose endowments and conduct were like other people`'s in common,
 and on their attaining to mature age, and requesting to have their liberty,
 they should be told they were born in slavery, and were lawful slaves,
 and therefore their request should be denied;
@@ -1660,7 +1660,7 @@ so that of necessity we must either justify the trade, or relinquish our right t
 as being the children of slaves.
 
 Why should it seem right to honest men to make advantage by
-these people more than by others'? Others enjoy freedom,
+these people more than by others`'? Others enjoy freedom,
 and receive wages equal to their work,
 at or near such time as they have discharged these equitable
 obligations they are under to those who educate them.
@@ -1673,10 +1673,10 @@ The upright in heart cannot succeed the wicked in their wickedness;
 nor is it consonant to the life they live, to hold fast an advantage unjustly gained.
 
 The negroes who live by plunder and the slave-trade, steal poor innocent children,
-invade their neighbours' territories, and spill much blood to get these slaves:
+invade their neighbours`' territories, and spill much blood to get these slaves:
 and can it be possible for an honest man to think that with a view to self-interest,
 we may continue slavery to the offspring of these unhappy sufferers,
-merely because they are the children of slaves', and not have a share of this guilt?
+merely because they are the children of slaves`', and not have a share of this guilt?
 
 It is granted by many, that the means used in getting them are unrighteous,
 and that buying them when brought here is wrong;
